<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YouWish</string>
    <string name="app_id">209843749224287</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email"><b>Email</b></string>
    <string name="prompt_password"><b>Password</b></string>
    <string name="action_login"><b>Login</b></string>
    <string name="newMember">New to YouWish?</string>
    <string name="action_register_here"><u>Register Here</u></string>
    <string name="logo_desc">Logo</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_format">This field contains illegal characters</string>

    <!-- Strings related to register -->
    <string name="fname"><b>First Name</b></string>
    <string name="lname"><b>Last Name</b></string>
    <string name="dob"><b>Date Of Birth</b></string>
    <string name="gender"><b>Gender</b></string>
    <string name="male"><b>Male</b></string>
    <string name="female"><b>Female</b></string>
    <string name="password_format">Password length must be at least 6 characters.</string>
    <string name="confirm_password"><b>Confirm Password</b></string>
    <string name="action_register"><b>Register</b></string>
    <string name="already_member">Already have an account?</string>
    <string name="action_goto_login"><u>Login Here</u></string>
    <string name="dob_desc">Icon for date of birth</string>
    <string name="password_incorrect">The passwords do not match</string>
    <string name="recover_password">Please enter your email</string>

    <!-- Strings related to main navigation -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_addwish">Add Wish</string>

    <string-array name="list_array">
        <item>My Profile</item>
        <item>Wish Stream</item>
        <item>Search Users</item>
        <item>Logout</item>
    </string-array>

    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_add_wish">Add Wish</string>
    <string name="add_progress_signing_in">Adding Wish…</string>
    <string name="wish_title"><b>Title</b></string>
    <string name="wish_img_desc"><b>Wish Image</b></string>
    <string name="wish_desc"><b>Description</b></string>
    <string name="wish_priority"><b>Priority</b></string>
    <string name="wish_location"><b>Location</b></string>
    <string name="wish_url"><b>URL</b></string>
    <string name="wish_bucket"><b>Bucket List</b></string>
    <string name="wish_product"><b>Product</b></string>
    <string name="wish_price"><b>Price</b></string>
    <string name="wish_ean"><b>Product Code</b></string>
    <string name="add_extra">Add more detail</string>
    <string name="wish_achieve"><b>Achieve By</b></string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="error_invalid_url">The url entered is invalid</string>
    <string name="locality">Locality</string>
    <string name="popular">Popular</string>
    <string name="recent">Recent</string>

    <!-- Strings related to profile -->
    <string name="profile_name">Full Name</string>
    <string name="wish_button">Wishes</string>
    <string name="follower_button">Followers</string>
    <string name="following_button">Following</string>
    <string name="profile_button">Profile</string>

    <!-- Strings related to profile bio -->
    <string name="bio_title"><b>Bio</b></string>
    <string name="profile_bio">Users bio...</string>
    <string name="edit_button">Edit Profile</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    
    <string name="profile_wishes">Wishes</string>
    <string name="follow_button">Follow</string>
    <string name="unfollow_button">Unfollow</string>
    <string name="bio">Age, Location, Occupation, Description .................... ...................</string>
    <string name="wishes">Wishes</string>
    

    <!-- Strings related to profile followers -->
    <string name="followers_title">Followers</string>

    <!-- Strings related to profile following -->
    <string name="following_title">Following</string>
    <string name="error_invalid_search">Please enter a user full name or valid email</string>
    <string name="title_activity_base">BaseActivity</string>
    
    <string name="load_more">tap to load</string>
    
    <string name="manage_account">Account Management</string>
    
    <string name="email_preference">Enter a new email address</string>
    <string name="summary_email_preference">Change your email address</string>
    <string name="title_email_preference">Email</string>
    
    <string name="password_preference">Enter a new password</string>
    <string name="summary_password_preference">Change your password</string>
    <string name="title_password_preference">Password</string>
    
    <string name="support">Support</string>
    <string name="contact_summary">Send us an email.</string>
    <string name="contact">Contact Us</string>
    
    <string name="title_activity_settings">Settings</string>
    
    
    <string name="no_connection">No Internet Connection Available!</string>
    <string name="tap_to_load">tap to reload</string>
    
    <string name="refresh">Refresh</string>
    
    <string name="close_button">Close</string>
    
    <string name="ok_button">OK</string>
    <string name="add_button">ADD</string>
    <string name="delete_button">DELETE</string>
    
    <string name="twitter">Twitter</string>
    <string name="twitter_desc">Find us on Twitter.</string>
    
</resources>
