<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/manage_account" >
        <EditTextPreference
            android:dialogTitle="@string/password_preference"
            android:key="password_preference"
            android:summary="@string/summary_password_preference"
            android:title="@string/title_password_preference" />
        <EditTextPreference
            android:dialogTitle="@string/email_preference"
            android:key="email_preference"
            android:summary="@string/summary_email_preference"
            android:title="@string/title_email_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/support" >
        <Preference
            android:summary="@string/contact_summary"
            android:title="@string/contact" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:recovery.youwish@gmail.com" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>